--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -3,6 +3,8 @@ name: docker-build-and-push
 on:
   workflow_dispatch:
   push:
+    branches:
+      - '!master'
     paths-ignore:
       - "README.md"
   pull_request:
