--- a/awstats_env.conf
+++ b/awstats_env.conf
@@ -123,7 +123,7 @@ LogType=W
 # Example for IIS:
 # LogFormat = 2
 #
-LogFormat="$AWSTATS_CONF_LOGFORMAT"
+LogFormat=1
 
 
 # If your log field's separator is not a space, you can change this parameter.
@@ -154,7 +154,7 @@ LogSeparator=" "
 # Example: "ftp.domain.com"
 # Example: "domain.com"
 #
-SiteDomain="$AWSTATS_CONF_SITEDOMAIN"
+SiteDomain=""
 
 
 # Enter here all other possible domain names, addresses or virtual host
@@ -169,7 +169,7 @@ SiteDomain="$AWSTATS_CONF_SITEDOMAIN"
 # Note: You can also use @/mypath/myfile if list of aliases are in a file.
 # Example: "www.myserver.com localhost 127.0.0.1 REGEX[mydomain\.(net|org)$]"
 #
-HostAliases="$AWSTATS_CONF_HOSTALIASES"
+HostAliases="localhost 127.0.0.1 REGEX[myserver\.com$]"
 
 
 # If you want to have hosts reported by name instead of ip address, AWStats
@@ -228,7 +228,7 @@ DirData="/var/lib/awstats"
 # Example: "/awstats"
 # Default: "/cgi-bin"   (means awstats.pl is in "/yourwwwroot/cgi-bin")
 #
-DirCgi=""
+DirCgi="/cgi-bin"
 
 
 # Relative or absolute web URL of your awstats icon directory.
@@ -238,7 +238,7 @@ DirCgi=""
 # Example: "../icon"
 # Default: "/icon" (means you must copy icon directories in "/mywwwroot/icon")
 #
-DirIcons="icons"
+DirIcons="/icon"
 
 
 # When this parameter is set to 1, AWStats adds a button on the report page to
@@ -1616,4 +1616,4 @@ ExtraTrackedRowsLimit=500
 # parameters that are lists of values.
 #
 
-Include "$AWSTATS_CONF_INCLUDE"
+#Include ""
