--- a/awstats.default.conf
+++ b/awstats.default.conf
@@ -154,7 +154,7 @@ LogSeparator=" "
 # Example: "ftp.domain.com"
 # Example: "domain.com"
 #
-SiteDomain=""
+SiteDomain="localhost"
 
 
 # Enter here all other possible domain names, addresses or virtual host
@@ -228,7 +228,7 @@ DirData="/var/lib/awstats"
 # Example: "/awstats"
 # Default: "/cgi-bin"   (means awstats.pl is in "/yourwwwroot/cgi-bin")
 #
-DirCgi="/cgi-bin"
+DirCgi=""
 
 
 # Relative or absolute web URL of your awstats icon directory.
