--- a/awstats_httpd.conf
+++ b/awstats_httpd.conf
@@ -3,7 +3,7 @@
     LoadModule perl_module /usr/lib/apache2/mod_perl.so
 
     DocumentRoot "/usr/lib/awstats/"
-    Alias /icons "/usr/lib/awstats/icon/"
+    Alias /icon "/usr/lib/awstats/icon/"
     ScriptAlias / "/usr/lib/awstats/cgi-bin/"
 
     <IfModule dir_module>
